--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
               <div class="line"></div>
               <p>Biarkan kami yang melakukan pekerjaan rumah anda. anda cukup bersantai.</p>
             </div>
-            <div class="cta">
+            <!-- <div class="cta">
               <button id="selengkapnya">Selengkapnya</button>
               <button id="hub">Hubungi Kami</button>
-            </div>
+            </div> -->
           </div>
           <div class="hero-image">
             
