--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
             fill-opacity="1"
             d="M0,128L60,128C120,128,240,128,360,133.3C480,139,600,149,720,176C840,203,960,245,1080,250.7C1200,256,1320,224,1380,208L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
         </svg>
-        <div class="content">
-          <article></article>
-        </div>
+      </div>
+      <div class="content">
+        <article>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </article>
       </div>
       <aside></aside>
     </main>
