--- a/index.html
+++ b/index.html
@@ -67,11 +67,7 @@
         </div>
       </div>
       <div class="content">
-        <article>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-        </article>
+        <article>testo</article>
       </div>
       <aside></aside>
     </main>
