--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a id="brand">Beberest.</a>
         </div>
 
-        <input type="checkbox" id="check">
+        <input type="checkbox" id="check" />
         <label for="check" class="icons">
           <i class="fa-solid fa-bars" id="menu-icon"></i>
           <i class="fa-solid fa-x" id="close-icon"></i>
@@ -45,19 +45,19 @@
         <div class="hero">
           <div class="hero-heading">
             <div class="wrapper-header">
-
               <h1>Anda rest kami beberes<span>.</span></h1>
               <div class="line"></div>
-              <p>Biarkan kami yang melakukan pekerjaan rumah anda. anda cukup bersantai.</p>
+              <p>
+                Biarkan kami yang melakukan pekerjaan rumah anda. anda cukup
+                bersantai.
+              </p>
             </div>
             <div class="cta">
               <button id="selengkapnya">Selengkapnya</button>
               <button id="hub">Hubungi Kami</button>
             </div>
           </div>
-          <div class="hero-image">
-            
-          </div>
+          <div class="hero-image"></div>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 270">
             <path
               fill="#F0ECE5"
@@ -66,10 +66,60 @@
           </svg>
         </div>
       </div>
+
       <div class="content">
-        <article>testo</article>
+        <div class="heading-content">
+          <h1>PELAYANAN KAMI</h1>
+          <u></u>
+        </div>
+        <div class="wrapper-article">
+          <article>
+            <img src="./assets/img/pembersihan-lantai.jpg" alt="" srcset="" />
+            <div class="article-content">
+              <h3>Pembersihan Lantai</h3>
+              <u></u>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque illum earum totam repellat esse doloribus</p>
+            </div>
+          </article>
+
+          <article>
+            <img src="./assets/img/pembasi-serangga.jpg" alt="" srcset="" />
+            <div class="article-content">
+              <h3>Pembasmi Hama</h3>
+              <u></u>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque illum earum totam repellat esse doloribus</p>
+            </div>
+          </article>
+
+          <article>
+            <img src="./assets/img/pembersihan-ruangan.jpg" alt="" srcset="" />
+            <div class="article-content">
+              <h3>Pembersihan Ruangan</h3>
+              <u></u>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque illum earum totam repellat esse doloribus</p>
+            </div>
+          </article>
+
+          <article>
+            <img src="./assets/img/pembersihan ac.jpg" alt="" srcset="" />
+            <div class="article-content">
+              <h3>Cuci AC</h3>
+              <u></u>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque illum earum totam repellat esse doloribus</p>
+            </div>
+          </article>
+
+        </div>
       </div>
-      <aside></aside>
+      <aside id="side-cta">
+        <ul>
+          <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+          <li><a href=""><i class="fa-brands fa-x-twitter"></i></a></li>
+          
+        </ul>
+      </aside>
     </main>
+    <footer></footer>
   </body>
 </html>
