--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </p>
             </div>
             <div class="cta">
-              <button id="selengkapnya">Selengkapnya</button>
+              <button id="selengkapnya"><a>Selengkapnya</a></button>
               <button id="hub">Hubungi Kami</button>
             </div>
           </div>
