--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <header>
       <nav>
         <div class="left-nav">
-          <a id="brand">Beberest.</a>
+          <i class="fa-brands fa-digital-ocean"></i>
+          <a id="brand">Beberest</a>
         </div>
 
         <input type="checkbox" id="check" />
@@ -71,6 +72,7 @@
           <article>
             <img src="./assets/img/pembersihan-lantai.jpg" alt="" srcset="" />
             <div class="article-content">
+              <i class="fa-brands fa-digital-ocean"></i>
               <h3>Pembersihan Lantai</h3>
               <u></u>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque illum earum totam repellat esse doloribus</p>
@@ -80,6 +82,7 @@
           <article>
             <img src="./assets/img/pembasi-serangga.jpg" alt="" srcset="" />
             <div class="article-content">
+              <i class="fa-brands fa-digital-ocean"></i>
               <h3>Pembasmi Hama</h3>
               <u></u>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque illum earum totam repellat esse doloribus</p>
@@ -89,6 +92,7 @@
           <article>
             <img src="./assets/img/pembersihan-ruangan.jpg" alt="" srcset="" />
             <div class="article-content">
+              <i class="fa-brands fa-digital-ocean"></i>
               <h3>Pembersihan Ruangan</h3>
               <u></u>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque illum earum totam repellat esse doloribus</p>
@@ -98,6 +102,7 @@
           <article>
             <img src="./assets/img/pembersihan ac.jpg" alt="" srcset="" />
             <div class="article-content">
+              <i class="fa-brands fa-digital-ocean"></i>
               <h3>Cuci AC</h3>
               <u></u>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque illum earum totam repellat esse doloribus</p>
@@ -115,6 +120,12 @@
         </ul>
       </aside>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="box-footer start-footer">
+        
+      </div>
+      <div class="box-footer center-footer"></div>
+      <div class="box-footer end-footer"></div>
+    </footer>
   </body>
 </html>
