--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         
         <div class="cr">
           <i class="fa-regular fa-copyright"></i>
-          <span>2024 - 2029 Beberest | All Rights Reserved</span>
+          <span>2024 Beberest | All Rights Reserved</span>
       </div>
       </div>
     </footer>
