--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
               <h3>Pembersihan Lantai</h3>
               <u></u>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
-                illum earum totam repellat esse doloribus
+                Dengan teknologi, kami akan bersihkan rumah anda dengan cepat dan bersih sampai ke inti bumi.
               </p>
             </div>
           </article>
@@ -104,8 +103,7 @@
               <h3>Pembasmi Hama</h3>
               <u></u>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
-                illum earum totam repellat esse doloribus
+                Kesal dengan serangga yang membandel di rumah anda? Serahkan kepada kami. akan kami habisi.
               </p>
             </div>
           </article>
@@ -117,8 +115,7 @@
               <h3>Pembersihan Ruangan</h3>
               <u></u>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
-                illum earum totam repellat esse doloribus
+                Kami akan membersihkan seluruh ruangan anda tanpa tersisa setitik pun hal yang anda tidak sukai.
               </p>
             </div>
           </article>
@@ -130,8 +127,7 @@
               <h3>Cuci AC</h3>
               <u></u>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
-                illum earum totam repellat esse doloribus
+                AC anda kotor? kami juga akan bersihkan. karena kebersihan AC merupakan unsur penting kenyamanan anda.
               </p>
             </div>
           </article>
