--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </p>
             </div>
             <div class="cta">
-              <a href='#product' id="selengkapnya">Selengkapnya</a>
+              <a href="#product" id="selengkapnya">Selengkapnya</a>
               <a href="#footer" id="hub">Hubungi Kami</a>
             </div>
           </div>
@@ -91,7 +91,8 @@
               <h3>Pembersihan Lantai</h3>
               <u></u>
               <p>
-                Dengan teknologi, kami akan bersihkan rumah anda dengan cepat dan bersih sampai ke inti bumi.
+                Dengan teknologi, kami akan bersihkan rumah anda dengan cepat
+                dan bersih sampai ke inti bumi.
               </p>
             </div>
           </article>
@@ -103,7 +104,8 @@
               <h3>Pembasmi Hama</h3>
               <u></u>
               <p>
-                Kesal dengan serangga yang membandel di rumah anda? Serahkan kepada kami. akan kami habisi.
+                Kesal dengan serangga yang membandel di rumah anda? Serahkan
+                kepada kami. akan kami habisi.
               </p>
             </div>
           </article>
@@ -115,7 +117,8 @@
               <h3>Pembersihan Ruangan</h3>
               <u></u>
               <p>
-                Kami akan membersihkan seluruh ruangan anda tanpa tersisa setitik pun hal yang anda tidak sukai.
+                Kami akan membersihkan seluruh ruangan anda tanpa tersisa
+                setitik pun hal yang anda tidak sukai.
               </p>
             </div>
           </article>
@@ -127,29 +130,36 @@
               <h3>Cuci AC</h3>
               <u></u>
               <p>
-                AC anda kotor? kami juga akan bersihkan. karena kebersihan AC merupakan unsur penting kenyamanan anda.
+                AC anda kotor? kami juga akan bersihkan. karena kebersihan AC
+                merupakan unsur penting kenyamanan a
               </p>
             </div>
           </article>
         </div>
       </div>
-      <aside id="side-cta">
-        <ul>
-          <li>
-            <a href="https://www.instagram.com/albertmuntheee/"><i class="fa-brands fa-instagram"></i></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/albertmuntheee/"><i class="fa-brands fa-whatsapp"></i></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/albertmuntheee/"><i class="fa-brands fa-x-twitter"></i></a>
-          </li>
-        </ul>
-      </aside>
     </main>
 
-    <div id="profile" class="container-slider">
+    <div id="side-cta">
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/albertmuntheee/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/albertmuntheee/"
+            ><i class="fa-brands fa-whatsapp"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/albertmuntheee/"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+        </li>
+      </ul>
+    </div>
 
+    <aside id="profile" class="container-slider">
       <div class="slider-title">
         <h3>PROFIL KAMI</h3>
         <u></u>
@@ -162,12 +172,14 @@
           <i class="fa-solid fa-arrow-right"></i>
         </button>
         <ul class="slides-container" id="slides-container">
-          
           <li class="slide">
             <div class="slide-profile">
               <div class="header-slide">
                 <div class="profile-image">
-                  <img src="./assets/img/andreas-alex-topi.jpeg" alt="" srcset="">
+                  <img
+                    src="./assets/img/andreas-alex-topi.jpeg"
+                    alt=""
+                    srcset="" />
                 </div>
               </div>
 
@@ -177,12 +189,12 @@
               </div>
             </div>
           </li>
-          
-                    <li class="slide">
+
+          <li class="slide">
             <div class="slide-profile">
               <div class="header-slide">
                 <div class="profile-image">
-                  <img src="./assets/img/winter.jpg" alt="" srcset="">
+                  <img src="./assets/img/winter.jpg" alt="" srcset="" />
                 </div>
               </div>
 
@@ -197,7 +209,7 @@
             <div class="slide-profile">
               <div class="header-slide">
                 <div class="profile-image">
-                  <img src="./assets/img/avatar-2.jpg" alt="" srcset="">
+                  <img src="./assets/img/avatar-2.jpg" alt="" srcset="" />
                 </div>
               </div>
 
@@ -212,7 +224,7 @@
             <div class="slide-profile">
               <div class="header-slide">
                 <div class="profile-image">
-                  <img src="./assets/img/avatar-3.jpg" alt="" srcset="">
+                  <img src="./assets/img/avatar-3.jpg" alt="" srcset="" />
                 </div>
               </div>
 
@@ -222,10 +234,9 @@
               </div>
             </div>
           </li>
-
         </ul>
       </section>
-    </div>
+    </aside>
 
     <footer id="footer">
       <div class="box-footer start-footer">
@@ -245,13 +256,19 @@
         <div class="sosmed">
           <ul>
             <li>
-              <a href="https://www.instagram.com/albertmuntheee/"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.instagram.com/albertmuntheee/"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/albertmuntheee/"><i class="fa-brands fa-whatsapp"></i></a>
+              <a href="https://www.instagram.com/albertmuntheee/"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/albertmuntheee/"><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="https://www.instagram.com/albertmuntheee/"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
             </li>
           </ul>
         </div>
